--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "MMM-Ecowatt",
   "version": "1.0.0",
   "description": "A MagicMirror module to display Ecowatt informations.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tttooommm56/MMM-Ecowatt.git"
-  },
   "main": "MMM-Ecowatt.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Thomas Cousin",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tttooommm56/MMM-Ecowatt.git"
+  },
+  "keywords": [
+    "ecowatt",
+    "electricity weather",
+    "electricity transmission network",
+    "france"
+  ]
 }
