--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "MMM-Ecowatt",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A MagicMirror module to display Ecowatt informations.",
   "main": "MMM-Ecowatt.js",
   "author": "Thomas Cousin",
+  "contributors": [
+		"https://github.com/tttooommm56/MMM-Ecowatt/graphs/contributors"
+	],
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2"
